# PanelTraining

./: advanced_map_app.py  main.py  my_panel.ipynb  pyproject.toml  simple_offline_plot.py
assets/: styles.css  template.html
js/: after_layout.js  render.js  show_hover.js  sync_geojson.js
