[project]
name = "panelstraining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.7.3",
    "numpy>=2.3.2",
    "panel>=1.7.5",
    "scipy>=1.16.1",
]

[dependency-groups]
dev = [
    "watchfiles>=1.1.0",
]
notebook = [
    "ipykernel>=6.30.1",
    "jupyter-bokeh>=4.0.5",
]
